--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_DB_URI='mongodb://127.0.0.1:27017/manishchat'
+MONGO_DB_URI='mongodb://127.0.0.1:27017/chat'
 JWT_SECRET=RYH7fI/Q95TPfT2aYdIi1DlDsco6YNH22MyRUXt5oT4=
 NODE_ENV=development
