--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "backend": "nodemon backend/server.js",
-    "frontend": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run backend\"  \"npm run frontend\" "
+    "server":"nodemon backend/server.js",
+    "start":"node backend/server.js",
+    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
