--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5000
-MONGO_DB_URI='mongodb://127.0.0.1:27017/chat'
+MONGO_DB_URI=mongodb+srv://manish946050:fx3u1OabdTXnFqrL@cluster0.ftw66.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=RYH7fI/Q95TPfT2aYdIi1DlDsco6YNH22MyRUXt5oT4
 NODE_ENV=development
+
